# Apeiron

./: .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
apeiron/: __init__.py  corona.py  deformation.py  hierarchy.py  polyhedron.py  substitution.py  symmetry.py  util.py  viz.py  zphi.py
apeiron/track_b/: __init__.py  geometric_prefilter.py  matrix_search.py  realisation.py  taxonomy.py
candidates/: README.md  rhombic_dodecahedron.json  rhombic_triacontahedron.json
candidates/danzer/: A.json  B.json  C.json  K.json  _paolini_extract.py  dissection_notes.md  fourth_pillar.py  paolini_dissection.json  substitution.json
docs/: algebra.md  arxiv_submission_v1.md  audit_kappa_vs_radius.md  audit_sibling_edge_to_edge.md  d6_lattice_design.md  decisions.md  literature.md  literature_notes.md  literature_review.md  no_go_draft.md  roadmap.md  strategy_pivot.md
docs/papers/: MANIFEST.md
docs/relays/: q10_2026-04-29.md  q11_2026-05-04.md  q12_2026-05-04.md  q13_2026-05-04.md  q14_2026-05-04.md  q15_2026-05-04.md  q16_2026-05-04.md  q17_2026-05-05.md  q18_2026-05-05.md  q19_2026-05-05.md
notebooks/: cube_corona_demo.py  danzer_demo.py  rth_demo.py  track_b_phi_cubed_candidates.py
scripts/: audit_sibling_face_to_face.py  sweep_n3_phi3_max_entry_3.py
tests/: test_corona.py  test_deformation.py  test_hierarchy.py  test_polyhedron.py  test_substitution.py  test_symmetry.py  test_track_b_geometric_prefilter.py  test_track_b_matrix_search.py  test_track_b_realisation.py  test_track_b_taxonomy.py  test_util.py  test_viz.py  test_zphi.py
(+5 files in other folders)
