[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apeiron"
version = "0.0.0"
description = "Research framework for the 3D Einstein problem over Z[phi]."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shane Hartley" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.26",
    "sympy>=1.12",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
viz = [
    "pyvista>=0.43",
    "plotly>=5.20",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["apeiron", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["apeiron"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
